alternative approach to z-index issue, since the other solution caused the prompt to be underneath the feature editor popup

--- a/src/geonode-client/app/static/theme/app/geoexplorer.css
+++ b/src/geonode-client/app/static/theme/app/geoexplorer.css
@@ -1,5 +1,5 @@
-.gx-popup {
-    z-index: 25000 !important;
+.gxp-annotations-tip {
+    z-index: 9011;
 }
 .optional-form-label {
     color: #736F6E;
